--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -29,7 +29,7 @@ html {
     }
 }
 
-@media(max-device-width : 480px) {
+@media screen and (min-device-width : 320px) and (max-device-width : 480px) {
 /* Styles */
     .navbar {
         display: none;
